--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="wrapper">
         <div class="'flex">
             <input type="search" placeholder="Search Gif" class="text">
+           <input type="number" placeholder="Number of Gif" class="numbers">
             <button class="search">Search</button>
         </div>
         <div class="searched_content"></div>
